--- a/index.html
+++ b/index.html
@@ -3,59 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Main Page</title>
   </head>
   <body>
-    <header>
-      <a href="#">WEBSTUDIO</a>
+    <header class="header">
+      <a class="logo" href="#"><span class="logo-title">Web</span>Studio</a>
       <nav>
-        <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+        <ul class="nav-list">
+          <li class="nav-list-item">Studio</li>
+          <li class="nav-list-item">Portfolio</li>
+          <li class="nav-list-item">Contacts</li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <a class="contact-email" href="mailto:info@devstudio.com" target="_blank">
+        info@devstudio.com
+      </a>
+      <a class="contact-tell" href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <main>
-      <section id="section-1">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
-      <section id="section-2">
-        <ul>
+      <div class="main-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button class="main-button" type="button">Order Service</button>
+      </div>
+      <div class="info-container">
+        <ul class="info-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="info-list-title">Strategy</h3>
+            <p class="info-list-par">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="info-list-title">Punctuality</h3>
+            <p class="info-list-par">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="info-list-title">Diligence</h3>
+            <p class="info-list-par">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="info-list-title">Technologies</h3>
+            <p class="info-list-par">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
-      </section>
-      <section id="section-3">
+      </div>
+      <div>
         <div>
           <h2>Our Team</h2>
           <ul>
@@ -102,7 +116,42 @@
             </li>
           </ul>
         </div>
-      </section>
+      </div>
+      <div>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="img/5.png" alt="Banking App" width="360" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="img/6.png" alt="Cashless payment" width="360" />
+            <h3>Cashless paiment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="img/7.png" alt="Meditation App" width="360" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="img/8.png" alt="Taxi Service" width="360" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="img/9.png" alt="Screen Illustrations" width="360" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="img/10.png" alt="Online Courses" width="360" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer>
       <div>
