--- a/index.html
+++ b/index.html
@@ -19,25 +19,41 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo" href="#"><span class="logo-title">Web</span>Studio</a>
       <nav>
+        <a class="logo" href="./index.html">
+          <span class="logo-title">Web</span>Studio
+        </a>
         <ul class="nav-list">
-          <li class="nav-list-item">Studio</li>
-          <li class="nav-list-item">Portfolio</li>
-          <li class="nav-list-item">Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a class="contact-email" href="mailto:info@devstudio.com" target="_blank">
-        info@devstudio.com
-      </a>
-      <a class="contact-tell" href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              class="contact-email"
+              href="mailto:info@devstudio.com"
+              target="_blank"
+              >info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="contact-tell" href="tel:+110001111111">
+              +11 (000) 111-11-11
+            </a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <div class="main-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="main-button" type="button">Order Service</button>
       </div>
-      <div class="info-container">
+      <div>
+        <h2>Title</h2>
         <ul class="info-list">
           <li>
             <h3 class="info-list-title">Strategy</h3>
@@ -70,83 +86,81 @@
         </ul>
       </div>
       <div>
-        <div>
-          <h2>Our Team</h2>
-          <ul>
-            <li>
-              <img
-                class="img-photo"
-                src="img/1.jpg"
-                alt="Mark Guerrero"
-                width="264"
-              />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </li>
-            <li>
-              <img
-                class="img-photo"
-                src="img/2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="264"
-              />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </li>
-            <li>
-              <img
-                class="img-photo"
-                src="img/3.jpg"
-                alt="Camila Garcia"
-                width="264"
-              />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
-              <img
-                class="img-photo"
-                src="img/4.jpg"
-                alt="Daniel Wilson"
-                width="264"
-              />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </li>
-          </ul>
-        </div>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              class="img-photo"
+              src="./images/1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              class="img-photo"
+              src="./images/2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              class="img-photo"
+              src="./images/3.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              class="img-photo"
+              src="./images/4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </div>
       <div>
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="img/5.png" alt="Banking App" width="360" />
+            <img src="./images/5.png" alt="Banking App" width="360" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="img/6.png" alt="Cashless payment" width="360" />
+            <img src="./images/6.png" alt="Cashless payment" width="360" />
             <h3>Cashless paiment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="img/7.png" alt="Meditation App" width="360" />
+            <img src="./images/7.png" alt="Meditation App" width="360" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="img/8.png" alt="Taxi Service" width="360" />
+            <img src="./images8.png" alt="Taxi Service" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="img/9.png" alt="Screen Illustrations" width="360" />
+            <img src="./images/9.png" alt="Screen Illustrations" width="360" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="img/10.png" alt="Online Courses" width="360" />
+            <img src="./images/10.png" alt="Online Courses" width="360" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
@@ -155,7 +169,7 @@
     </main>
     <footer>
       <div>
-        <a href="#">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
