--- a/index.html
+++ b/index.html
@@ -7,40 +7,40 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
     />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
     <title>Main Page</title>
   </head>
   <body>
-    <header class="header">
+    <header>
       <nav>
         <a class="logo" href="./index.html">
           <span class="logo-title">Web</span>Studio
         </a>
-        <ul class="nav-list">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul>
+          <li><a class="nav-list-item" href="">Studio</a></li>
+          <li><a class="nav-list-item" href="">Portfolio</a></li>
+          <li><a class="nav-list-item" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
             <a
-              class="contact-email"
+              class="contacts"
               href="mailto:info@devstudio.com"
               target="_blank"
-              >info@devstudio.com
+            >
+              info@devstudio.com
             </a>
           </li>
           <li>
-            <a class="contact-tell" href="tel:+110001111111">
+            <a class="contacts" href="tel:+110001111111">
               +11 (000) 111-11-11
             </a>
           </li>
@@ -49,43 +49,43 @@
     </header>
     <main>
       <div class="main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <h1 class="main-title">Effective Solutions<br />for Your Business</h1>
         <button class="main-button" type="button">Order Service</button>
       </div>
       <div>
         <h2>Title</h2>
-        <ul class="info-list">
+        <ul>
           <li>
-            <h3 class="info-list-title">Strategy</h3>
-            <p class="info-list-par">
+            <h3>Strategy</h3>
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="info-list-title">Punctuality</h3>
-            <p class="info-list-par">
+            <h3>Punctuality</h3>
+            <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time
             </p>
           </li>
           <li>
-            <h3 class="info-list-title">Diligence</h3>
-            <p class="info-list-par">
+            <h3>Diligence</h3>
+            <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="info-list-title">Technologies</h3>
-            <p class="info-list-par">
+            <h3>Technologies</h3>
+            <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </div>
-      <div>
+      <div class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -150,7 +150,7 @@
             <p>App</p>
           </li>
           <li>
-            <img src="./images8.png" alt="Taxi Service" width="360" />
+            <img src="./images/8.png" alt="Taxi Service" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
@@ -167,14 +167,14 @@
         </ul>
       </div>
     </main>
-    <footer>
-      <div>
-        <a href="./index.html">WEBSTUDIO</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html">
+        <span class="logo-title">Web</span>Studio
+      </a>
+      <p class="par-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
