--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         </ul>
       </address>
     </header>
-    <div class="main-section">
+    <section class="main-section">
       <h1 class="main-title">Effective Solutions<br />for Your Business</h1>
       <button class="main-button" type="button">Order Service</button>
-    </div>
+    </section>
     <div>
       <h2>Title</h2>
       <ul>
