--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
   <body>
     <header>
       <nav>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-title">Studio</span>
+        </a>
         <ul>
-          <li>
-            <a class="logo" href="./index.html">
-              Web
-              <span class="logo-title">Studio</span>
-            </a>
-          </li>
           <li><a class="nav-list-item" href="">Studio</a></li>
           <li><a class="nav-list-item" href="">Portfolio</a></li>
           <li><a class="nav-list-item" href="">Contacts</a></li>
@@ -50,45 +47,45 @@
         </ul>
       </address>
     </header>
-    <div class="main-section">
+    <section class="main-section">
       <h1 class="main-title">Effective Solutions<br />for Your Business</h1>
       <button class="main-button" type="button">Order Service</button>
-    </div>
-    <div>
-      <h2>Title</h2>
+    </section>
+    <section>
+      <h2 class="title-hedading">Title</h2>
       <ul>
         <li>
-          <h3>Strategy</h3>
-          <p>
+          <h3 class="hed-3">Strategy</h3>
+          <p class="sect-par">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>
+          <h3 class="hed-3">Punctuality</h3>
+          <p class="sect-par">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>
+          <h3 class="hed-3">Diligence</h3>
+          <p class="sect-par">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>
+          <h3 class="hed-3">Technologies</h3>
+          <p class="sect-par">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
         </li>
       </ul>
-    </div>
-    <div class="team">
-      <h2>Our Team</h2>
+    </section>
+    <section class="team">
+      <h2 class="title-hedading">Our Team</h2>
       <ul>
         <li class="team-list-item">
           <img
@@ -97,8 +94,8 @@
             alt="Mark Guerrero"
             width="264"
           />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="hed-3">Mark Guerrero</h3>
+          <p class="sect-par">Product Designer</p>
         </li>
         <li class="team-list-item">
           <img
@@ -108,8 +105,8 @@
             width="264"
             height="264"
           />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="hed-3">Tom Ford</h3>
+          <p class="sect-par">Frontend Developer</p>
         </li>
         <li class="team-list-item">
           <img
@@ -118,8 +115,8 @@
             alt="Camila Garcia"
             width="264"
           />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="hed-3">Camila Garcia</h3>
+          <p class="sect-par">Marketing</p>
         </li>
         <li class="team-list-item">
           <img
@@ -128,49 +125,50 @@
             alt="Daniel Wilson"
             width="264"
           />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="hed-3">Daniel Wilson</h3>
+          <p class="sect-par">UI Designer</p>
         </li>
       </ul>
-    </div>
-    <div>
-      <h2>Our Portfolio</h2>
+    </section>
+    <section>
+      <h2 class="title-hedading">Our Portfolio</h2>
       <ul>
         <li>
           <img src="./images/5.png" alt="Banking App" width="360" />
-          <h3>Banking App</h3>
-          <p>App</p>
+          <h3 class="hed-3">Banking App</h3>
+          <p class="sect-par">App</p>
         </li>
         <li>
           <img src="./images/6.png" alt="Cashless payment" width="360" />
-          <h3>Cashless paiment</h3>
-          <p>Marketing</p>
+          <h3 class="hed-3">Cashless paiment</h3>
+          <p class="sect-par">Marketing</p>
         </li>
         <li>
           <img src="./images/7.png" alt="Meditation App" width="360" />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3 class="hed-3">Meditation App</h3>
+          <p class="sect-par">App</p>
         </li>
         <li>
           <img src="./images/8.png" alt="Taxi Service" width="360" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="hed-3">Taxi Service</h3>
+          <p class="sect-par">Marketing</p>
         </li>
         <li>
           <img src="./images/9.png" alt="Screen Illustrations" width="360" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="hed-3">Screen Illustrations</h3>
+          <p class="sect-par">Design</p>
         </li>
         <li>
           <img src="./images/10.png" alt="Online Courses" width="360" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="hed-3">Online Courses</h3>
+          <p class="sect-par">Marketing</p>
         </li>
       </ul>
-    </div>
+    </section>
     <footer class="footer">
-      <a class="logo-footer" href="./index.html">
-        <span class="logo-title">Web</span>Studio
+      <a class="logo-footer" href="./index.html"
+        >Web
+        <span class="logo-title-footer">Studio</span>
       </a>
       <p class="par-footer">
         Increase the flow of customers and sales for your business with digital
