--- a/index.html
+++ b/index.html
@@ -47,124 +47,126 @@
         </ul>
       </address>
     </header>
-    <section class="main-section">
-      <h1 class="main-title">Effective Solutions<br />for Your Business</h1>
-      <button class="main-button" type="button">Order Service</button>
-    </section>
-    <section>
-      <h2 class="title-hedading">Title</h2>
-      <ul>
-        <li>
-          <h3 class="hed-3">Strategy</h3>
-          <p class="sect-par">
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3 class="hed-3">Punctuality</h3>
-          <p class="sect-par">
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time
-          </p>
-        </li>
-        <li>
-          <h3 class="hed-3">Diligence</h3>
-          <p class="sect-par">
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3 class="hed-3">Technologies</h3>
-          <p class="sect-par">
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="team">
-      <h2 class="title-hedading">Our Team</h2>
-      <ul>
-        <li class="team-list-item">
-          <img
-            class="img-photo"
-            src="./images/1.jpg"
-            alt="Mark Guerrero"
-            width="264"
-          />
-          <h3 class="hed-3">Mark Guerrero</h3>
-          <p class="sect-par">Product Designer</p>
-        </li>
-        <li class="team-list-item">
-          <img
-            class="img-photo"
-            src="./images/2.jpg"
-            alt="Tom Ford"
-            width="264"
-            height="264"
-          />
-          <h3 class="hed-3">Tom Ford</h3>
-          <p class="sect-par">Frontend Developer</p>
-        </li>
-        <li class="team-list-item">
-          <img
-            class="img-photo"
-            src="./images/3.jpg"
-            alt="Camila Garcia"
-            width="264"
-          />
-          <h3 class="hed-3">Camila Garcia</h3>
-          <p class="sect-par">Marketing</p>
-        </li>
-        <li class="team-list-item">
-          <img
-            class="img-photo"
-            src="./images/4.jpg"
-            alt="Daniel Wilson"
-            width="264"
-          />
-          <h3 class="hed-3">Daniel Wilson</h3>
-          <p class="sect-par">UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2 class="title-hedading">Our Portfolio</h2>
-      <ul>
-        <li>
-          <img src="./images/5.png" alt="Banking App" width="360" />
-          <h3 class="hed-3">Banking App</h3>
-          <p class="sect-par">App</p>
-        </li>
-        <li>
-          <img src="./images/6.png" alt="Cashless payment" width="360" />
-          <h3 class="hed-3">Cashless paiment</h3>
-          <p class="sect-par">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/7.png" alt="Meditation App" width="360" />
-          <h3 class="hed-3">Meditation App</h3>
-          <p class="sect-par">App</p>
-        </li>
-        <li>
-          <img src="./images/8.png" alt="Taxi Service" width="360" />
-          <h3 class="hed-3">Taxi Service</h3>
-          <p class="sect-par">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/9.png" alt="Screen Illustrations" width="360" />
-          <h3 class="hed-3">Screen Illustrations</h3>
-          <p class="sect-par">Design</p>
-        </li>
-        <li>
-          <img src="./images/10.png" alt="Online Courses" width="360" />
-          <h3 class="hed-3">Online Courses</h3>
-          <p class="sect-par">Marketing</p>
-        </li>
-      </ul>
-    </section>
+    <main>
+      <section class="main-section">
+        <h1 class="main-title">Effective Solutions<br />for Your Business</h1>
+        <button class="main-button" type="button">Order Service</button>
+      </section>
+      <section>
+        <h2 class="title-hedading">Title</h2>
+        <ul>
+          <li>
+            <h3 class="hed-3">Strategy</h3>
+            <p class="sect-par">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="hed-3">Punctuality</h3>
+            <p class="sect-par">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time
+            </p>
+          </li>
+          <li>
+            <h3 class="hed-3">Diligence</h3>
+            <p class="sect-par">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="hed-3">Technologies</h3>
+            <p class="sect-par">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2 class="title-hedading">Our Team</h2>
+        <ul>
+          <li class="team-list-item">
+            <img
+              class="img-photo"
+              src="./images/1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3 class="hed-3">Mark Guerrero</h3>
+            <p class="sect-par">Product Designer</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              class="img-photo"
+              src="./images/2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="264"
+            />
+            <h3 class="hed-3">Tom Ford</h3>
+            <p class="sect-par">Frontend Developer</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              class="img-photo"
+              src="./images/3.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3 class="hed-3">Camila Garcia</h3>
+            <p class="sect-par">Marketing</p>
+          </li>
+          <li class="team-list-item">
+            <img
+              class="img-photo"
+              src="./images/4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3 class="hed-3">Daniel Wilson</h3>
+            <p class="sect-par">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="title-hedading">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/5.png" alt="Banking App" width="360" />
+            <h3 class="hed-3">Banking App</h3>
+            <p class="sect-par">App</p>
+          </li>
+          <li>
+            <img src="./images/6.png" alt="Cashless payment" width="360" />
+            <h3 class="hed-3">Cashless paiment</h3>
+            <p class="sect-par">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/7.png" alt="Meditation App" width="360" />
+            <h3 class="hed-3">Meditation App</h3>
+            <p class="sect-par">App</p>
+          </li>
+          <li>
+            <img src="./images/8.png" alt="Taxi Service" width="360" />
+            <h3 class="hed-3">Taxi Service</h3>
+            <p class="sect-par">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/9.png" alt="Screen Illustrations" width="360" />
+            <h3 class="hed-3">Screen Illustrations</h3>
+            <p class="sect-par">Design</p>
+          </li>
+          <li>
+            <img src="./images/10.png" alt="Online Courses" width="360" />
+            <h3 class="hed-3">Online Courses</h3>
+            <p class="sect-par">Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
       <a class="logo-footer" href="./index.html"
         >Web
