--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           >Web<span class="logo-title">Studio</span>
         </a>
         <ul>
-          <li><a class="nav-list-item" href="">Studio</a></li>
+          <li>
+            <a class="nav-list-item" href="./index.html">Studio</a>
+          </li>
           <li><a class="nav-list-item" href="">Portfolio</a></li>
           <li><a class="nav-list-item" href="">Contacts</a></li>
         </ul>
