--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         <h2 class="title-hedading">Title</h2>
         <ul>
           <li>
-            <h3 class="hed-3">Strategy</h3>
+            <h3 class="heading-3">Strategy</h3>
             <p class="sect-par">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="hed-3">Punctuality</h3>
+            <h3 class="heading-3">Punctuality</h3>
             <p class="sect-par">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time
             </p>
           </li>
           <li>
-            <h3 class="hed-3">Diligence</h3>
+            <h3 class="heading-3">Diligence</h3>
             <p class="sect-par">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="hed-3">Technologies</h3>
+            <h3 class="heading-3">Technologies</h3>
             <p class="sect-par">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -97,7 +97,7 @@
               alt="Mark Guerrero"
               width="264"
             />
-            <h3 class="hed-3">Mark Guerrero</h3>
+            <h3 class="heading-3">Mark Guerrero</h3>
             <p class="sect-par">Product Designer</p>
           </li>
           <li class="team-list-item">
@@ -108,7 +108,7 @@
               width="264"
               height="264"
             />
-            <h3 class="hed-3">Tom Ford</h3>
+            <h3 class="heading-3">Tom Ford</h3>
             <p class="sect-par">Frontend Developer</p>
           </li>
           <li class="team-list-item">
@@ -118,7 +118,7 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3 class="hed-3">Camila Garcia</h3>
+            <h3 class="heading-3">Camila Garcia</h3>
             <p class="sect-par">Marketing</p>
           </li>
           <li class="team-list-item">
@@ -128,7 +128,7 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3 class="hed-3">Daniel Wilson</h3>
+            <h3 class="heading-3">Daniel Wilson</h3>
             <p class="sect-par">UI Designer</p>
           </li>
         </ul>
@@ -137,33 +137,33 @@
         <h2 class="title-hedading">Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/5.png" alt="Banking App" width="360" />
-            <h3 class="hed-3">Banking App</h3>
+            <img src="./images/5.jpg" alt="Banking App" width="360" />
+            <h3 class="heading-3">Banking App</h3>
             <p class="sect-par">App</p>
           </li>
           <li>
-            <img src="./images/6.png" alt="Cashless payment" width="360" />
-            <h3 class="hed-3">Cashless paiment</h3>
+            <img src="./images/6.jpg" alt="Cashless payment" width="360" />
+            <h3 class="heading-3">Cashless Payment</h3>
             <p class="sect-par">Marketing</p>
           </li>
           <li>
-            <img src="./images/7.png" alt="Meditation App" width="360" />
-            <h3 class="hed-3">Meditation App</h3>
+            <img src="./images/7.jpg" alt="Meditation App" width="360" />
+            <h3 class="heading-3">Meditation App</h3>
             <p class="sect-par">App</p>
           </li>
           <li>
-            <img src="./images/8.png" alt="Taxi Service" width="360" />
-            <h3 class="hed-3">Taxi Service</h3>
+            <img src="./images/8.jpg" alt="Taxi Service" width="360" />
+            <h3 class="heading-3">Taxi Service</h3>
             <p class="sect-par">Marketing</p>
           </li>
           <li>
-            <img src="./images/9.png" alt="Screen Illustrations" width="360" />
-            <h3 class="hed-3">Screen Illustrations</h3>
+            <img src="./images/9.jpg" alt="Screen Illustrations" width="360" />
+            <h3 class="heading-3">Screen Illustrations</h3>
             <p class="sect-par">Design</p>
           </li>
           <li>
-            <img src="./images/10.png" alt="Online Courses" width="360" />
-            <h3 class="hed-3">Online Courses</h3>
+            <img src="./images/10.jpg" alt="Online Courses" width="360" />
+            <h3 class="heading-3">Online Courses</h3>
             <p class="sect-par">Marketing</p>
           </li>
         </ul>
