--- a/index.html
+++ b/index.html
@@ -59,28 +59,28 @@
         <ul>
           <li>
             <h3 class="heading-3">Strategy</h3>
-            <p class="sect-par">
+            <p class="section-par">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="heading-3">Punctuality</h3>
-            <p class="sect-par">
+            <p class="section-par">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time
             </p>
           </li>
           <li>
             <h3 class="heading-3">Diligence</h3>
-            <p class="sect-par">
+            <p class="section-par">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="heading-3">Technologies</h3>
-            <p class="sect-par">
+            <p class="section-par">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -98,7 +98,7 @@
               width="264"
             />
             <h3 class="heading-3">Mark Guerrero</h3>
-            <p class="sect-par">Product Designer</p>
+            <p class="section-par">Product Designer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -109,7 +109,7 @@
               height="264"
             />
             <h3 class="heading-3">Tom Ford</h3>
-            <p class="sect-par">Frontend Developer</p>
+            <p class="section-par">Frontend Developer</p>
           </li>
           <li class="team-list-item">
             <img
@@ -119,7 +119,7 @@
               width="264"
             />
             <h3 class="heading-3">Camila Garcia</h3>
-            <p class="sect-par">Marketing</p>
+            <p class="section-par">Marketing</p>
           </li>
           <li class="team-list-item">
             <img
@@ -129,7 +129,7 @@
               width="264"
             />
             <h3 class="heading-3">Daniel Wilson</h3>
-            <p class="sect-par">UI Designer</p>
+            <p class="section-par">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -139,32 +139,32 @@
           <li>
             <img src="./images/5.jpg" alt="Banking App" width="360" />
             <h3 class="heading-3">Banking App</h3>
-            <p class="sect-par">App</p>
+            <p class="section-par">App</p>
           </li>
           <li>
             <img src="./images/6.jpg" alt="Cashless payment" width="360" />
             <h3 class="heading-3">Cashless Payment</h3>
-            <p class="sect-par">Marketing</p>
+            <p class="section-par">Marketing</p>
           </li>
           <li>
             <img src="./images/7.jpg" alt="Meditation App" width="360" />
             <h3 class="heading-3">Meditation App</h3>
-            <p class="sect-par">App</p>
+            <p class="section-par">App</p>
           </li>
           <li>
             <img src="./images/8.jpg" alt="Taxi Service" width="360" />
             <h3 class="heading-3">Taxi Service</h3>
-            <p class="sect-par">Marketing</p>
+            <p class="section-par">Marketing</p>
           </li>
           <li>
             <img src="./images/9.jpg" alt="Screen Illustrations" width="360" />
             <h3 class="heading-3">Screen Illustrations</h3>
-            <p class="sect-par">Design</p>
+            <p class="ssection-par">Design</p>
           </li>
           <li>
             <img src="./images/10.jpg" alt="Online Courses" width="360" />
             <h3 class="heading-3">Online Courses</h3>
-            <p class="sect-par">Marketing</p>
+            <p class="section-par">Marketing</p>
           </li>
         </ul>
       </section>
